# aide

./: .gitignore  AIagentCli.txt  Cargo.toml  README.md  install.ps1
.github/workflows/: release.yml
docs/: DEVELOPMENT.md  USER_GUIDE.md
src/: main.rs  session.rs
src/agent/: context.rs  loop_.rs  mod.rs  planner.rs  subagent.rs
src/agent/memory/: mod.rs
src/cli/: mod.rs
src/llm/: anthropic.rs  deepseek.rs  mod.rs  ollama.rs  openai.rs  provider.rs
src/services/: lsp.rs  mcp.rs  mod.rs  model_router.rs  rag.rs
src/storage/: config.rs  history.rs  mod.rs  settings.rs
src/tools/: mod.rs  permission.rs  planning.rs
src/tools/builtin/: bash.rs  edit.rs  glob.rs  grep.rs  lsp.rs  mod.rs  read.rs  task.rs  webfetch.rs  websearch.rs  write.rs
src/tui/: app.rs  mod.rs  setup.rs  themes.rs
src/tui/widgets/: input.rs  messages.rs  mod.rs  status.rs
src/utils/: mod.rs  token_counter.rs
