[package]
name = "aide-cli"
version = "0.1.0"
edition = "2021"
description = "A high-performance, modular AI Agent CLI tool"

[[bin]]
name = "aide"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
ratatui = "0.29"
crossterm = "0.28"
dirs = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
colored = "3"
async-trait = "0.1"
regex = "1"
glob = "0.3"
unicode-width = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
